<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CreateNewLocation" >
    

    
    
    <!-- Type in name of category -->
	<RelativeLayout
	    android:padding="@dimen/activity_vertical_margin"
    	
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@layout/rounded_corner_transparent"
	    android:layout_margin="@dimen/item_margin_size"
	    >

	    <TextView 
	        android:id="@+id/create_category_title_label"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:text="@string/create_item_title"
	        
	        android:textSize="@dimen/item_title_size"
	        android:textAllCaps="true"
	        android:drawableLeft="@drawable/white_content_edit"
	        
	        
	        />
	    
	    <EditText 
	        android:id="@+id/create_category_title_field"
	       	android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_toRightOf="@id/create_category_title_label"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:hint="@string/create_category_title_hint"
	        android:layout_marginRight="@dimen/item_margin_size"
	        android:inputType="text"
	        
	        
	        />	
	</RelativeLayout>
	
	<Button 

	   	android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/create_item_submit_button"
	    android:textSize="@dimen/item_title_size"
	   	android:layout_margin="@dimen/item_margin_size"
	    android:padding="@dimen/item_margin_size"
	    
	    android:layout_gravity="center_horizontal"
	    android:textAllCaps="true"

	    
	    android:onClick="createCategory"
	    />
	
	

</LinearLayout>