<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:BannerView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RouteSearchActivity" >

    <RelativeLayout
        android:id="@+id/layoutRelMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewDeparture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departureStopName"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layoutDepartureOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editTextDeparture"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/hintFrom"
                    android:inputType="text" />

                <Button
                    android:id="@+id/buttonDepExpand"
                    style="@style/GeneralButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Get Address" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destinationStopName"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layoutDestinationOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/editTextDestination"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/hintTo"
                    android:inputType="text" />

                <Button
                    android:id="@+id/buttonDestExpand"
                    style="@style/GeneralButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Get Address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textTime"
                    style="@style/SimpleClickableText" />

                <TextView
                    android:id="@+id/textDate"
                    style="@style/SimpleClickableText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <!--
                <EditText
                    android:id="@+id/editHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:inputType="numberDecimal"
                    android:hint="12" />

                <TextView
                    android:id="@+id/textHourMinSeparator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:text=":" />

                <EditText
                    android:id="@+id/editMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="numberDecimal"
                    android:ems="2"
                    android:hint="00" />
                -->

                <LinearLayout
                    android:id="@+id/layoutToggleTimeType"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textSwitchDeparture"
                        style="@style/TextSwitch"
                        android:background="@color/selected_text_background_color"
                        android:clickable="true"
                        android:text="Departure" />
                    <!--
                         <TextView
                        android:id="@+id/textSwitchDeparture"
                        style="@style/TextSwitch"
                        android:background="@drawable/dark_orange"
                        android:text="Departure" />
                    -->

                    <TextView
                        android:id="@+id/textSwitchArrival"
                        style="@style/TextSwitch"
                        android:background="@color/unselected_text_background_color"
                        android:clickable="true"
                        android:text="Arrival" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAdvancedSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textOptimizations"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Result optimizations:" />

                <Spinner
                    android:id="@+id/spinnerOptimizations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textOptimizations"
                    style="@style/SimpleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Means of transport:" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <!--
                    <TextView
                        android:id="@+id/buttonTypeWalk"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        style="@style/GeneralButton"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Fastest" />

                    <TextView
                        android:id="@+id/buttonTypeCycle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        style="@style/GeneralButton"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Least transfers" />

                    <TextView
                        android:id="@+id/buttonTypePublicTransport"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        style="@style/GeneralButton"
                        android:singleLine="true"
                        android:text="Least walking" />
                    -->

                    <ImageButton
                        android:id="@+id/imgToggleButtonBus"
                        style="@style/VehicleModeToggleButton"
                        android:src="@drawable/bus_white"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/imgToggleButtonTrain"
                        style="@style/VehicleModeToggleButton"
                        android:src="@drawable/train_white"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/imgToggleButtonMetro"
                        style="@style/VehicleModeToggleButton"
                        android:src="@drawable/metro_white"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/imgToggleButtonTram"
                        style="@style/VehicleModeToggleButton"
                        android:src="@drawable/tram_white"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/imgToggleButtonFerry"
                        style="@style/VehicleModeToggleButton"
                        android:src="@drawable/boat_white"
                        android:text="" />

                    <ImageButton
                        android:id="@+id/imgToggleButtonWalk"
                        style="@style/VehicleModeToggleButton"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/man_white"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonAdvancedOptions"
                style="@style/GeneralButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/advancedOptions" />

            <Button
                android:id="@+id/buttonSearch"
                style="@style/GeneralButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/executeSearch" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>